use Integer.valueOf(..)